# ccc-tracker

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  main.py  plan.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_csv_staging.py  003_csv_promotion.py  004_document_artifacts_metadata.py  005_document_chunks.py  006_document_local_path_review.py  007_embeddings_and_llm_jobs.py  008_pgvector_document_chunks.py  009_ordinance_llm_summary.py  010_alert_subscriptions.py  011_ordinance_llm_provenance.py
citycouncil/: .coverage  activity.py  activity_query.py  api.py  auth.py  cli.py  config.py  constants.py  csv_loader.py  csv_promote.py  documents_stats.py  export_data.py  meetings_detail.py  ordinance_public.py  parsing.py  pipeline.py  rss.py  search_limits.py  subscriptions.py
docs/: TICKETS.md
fixtures/: sample_backfill.csv  sample_elms_response.json
tests/: conftest.py  test_activity.py  test_activity_q.py  test_activity_query.py  test_admin_auth.py  test_auth_verify.py  test_cli_smoke.py  test_config_settings.py  test_csv_loader.py  test_csv_promote.py  test_documents_extract_filters.py  test_documents_stats.py  test_documents_sync.py  test_elms_adapter.py  test_elms_enrich_unit.py  test_embeddings_huggingface.py  test_export.py  test_export_data_unit.py  test_hf_embedding_params.py  test_ingest_dlq.py  test_meetings_detail.py  test_meetings_detail_unit.py  test_normalize_unit.py  test_ordinance_json_extract.py  test_ordinance_public_unit.py  test_parsing.py  test_pdf_text.py  test_phase5_public.py  test_pipeline.py  test_rss.py  test_search_limits.py  test_search_preview.py  test_search_trust.py  test_subscriptions_unit.py
(+52 files in other folders)
